Sped up fading, fixed spacing.

--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 body {
 	background-color: lightyellow;
 	font-family : 'open sans';
-
+	padding-bottom: 100px;
 }
 
 .chevron {
